--- a/lab3-1.ipynb
+++ b/lab3-1.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "id": "b4fa65b0",
    "metadata": {
     "ExecuteTime": {
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "id": "53d221fd",
    "metadata": {
     "ExecuteTime": {
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "id": "cf165e82",
    "metadata": {
     "ExecuteTime": {
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "id": "6688fc4e",
    "metadata": {
     "ExecuteTime": {
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "id": "18be1d23",
    "metadata": {
     "ExecuteTime": {
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 33,
    "id": "8d952cf0",
    "metadata": {
     "ExecuteTime": {
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 34,
    "id": "6cfc979b",
    "metadata": {
     "ExecuteTime": {
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 35,
    "id": "8940eccd",
    "metadata": {
     "ExecuteTime": {
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 36,
    "id": "8e17b1e6",
    "metadata": {
     "ExecuteTime": {
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 37,
    "id": "f2d35905",
    "metadata": {
     "ExecuteTime": {
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 38,
    "id": "a50596f4",
    "metadata": {
     "ExecuteTime": {
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 39,
    "id": "e83d6394",
    "metadata": {
     "ExecuteTime": {
@@ -951,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 40,
    "id": "869c3065",
    "metadata": {
     "ExecuteTime": {
@@ -1095,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 41,
    "id": "dd9c9363",
    "metadata": {
     "ExecuteTime": {
@@ -1176,7 +1176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 42,
    "id": "86e6f5b7",
    "metadata": {
     "ExecuteTime": {
@@ -1282,7 +1282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 43,
    "id": "9bb06776",
    "metadata": {
     "ExecuteTime": {
@@ -1339,7 +1339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 44,
    "id": "1c095221",
    "metadata": {
     "ExecuteTime": {
@@ -1447,7 +1447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 45,
    "id": "09c404d5",
    "metadata": {
     "ExecuteTime": {
@@ -1565,7 +1565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 46,
    "id": "35981fd0",
    "metadata": {},
    "outputs": [
@@ -1589,7 +1589,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Got hash (50, 4), -16.2326425678578 but expected (50, 4), -16.16536590645467\n"
+      "Got hash (50, 4), -16.232642567857695 but expected (50, 4), -16.16536590645467\n"
      ]
     },
     {
@@ -1613,7 +1613,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[49], line 7\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[38;5;28;01massert\u001b[39;00m check_scalar(loss, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m0xf0c8ccc9\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m tick\u001b[38;5;241m.\u001b[39mmarks(\u001b[38;5;241m5\u001b[39m):        \n\u001b[1;32m----> 7\u001b[0m     \u001b[38;5;28;01massert\u001b[39;00m check_hash(grads[\u001b[38;5;241m0\u001b[39m], ((\u001b[38;5;241m50\u001b[39m, \u001b[38;5;241m4\u001b[39m), \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m16.16536590645467\u001b[39m))\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m tick\u001b[38;5;241m.\u001b[39mmarks(\u001b[38;5;241m5\u001b[39m):        \n\u001b[0;32m     10\u001b[0m     \u001b[38;5;28;01massert\u001b[39;00m check_hash(grads[\u001b[38;5;241m1\u001b[39m], ((\u001b[38;5;241m50\u001b[39m, \u001b[38;5;241m50\u001b[39m), \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m155.12594909703253\u001b[39m))\n",
+      "Cell \u001b[1;32mIn[46], line 7\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[38;5;28;01massert\u001b[39;00m check_scalar(loss, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m0xf0c8ccc9\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m tick\u001b[38;5;241m.\u001b[39mmarks(\u001b[38;5;241m5\u001b[39m):        \n\u001b[1;32m----> 7\u001b[0m     \u001b[38;5;28;01massert\u001b[39;00m check_hash(grads[\u001b[38;5;241m0\u001b[39m], ((\u001b[38;5;241m50\u001b[39m, \u001b[38;5;241m4\u001b[39m), \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m16.16536590645467\u001b[39m))\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m tick\u001b[38;5;241m.\u001b[39mmarks(\u001b[38;5;241m5\u001b[39m):        \n\u001b[0;32m     10\u001b[0m     \u001b[38;5;28;01massert\u001b[39;00m check_hash(grads[\u001b[38;5;241m1\u001b[39m], ((\u001b[38;5;241m50\u001b[39m, \u001b[38;5;241m50\u001b[39m), \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m155.12594909703253\u001b[39m))\n",
       "\u001b[1;31mAssertionError\u001b[0m: "
      ]
     }
@@ -1973,7 +1973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "a2c856b9",
    "metadata": {
     "ExecuteTime": {
@@ -2012,42 +2012,23 @@
     "\n",
     "    # Aprox 1 linea para empezar la matriz de pesos de la forget gate\n",
     "    # Recuerden que esta debe empezar con numeros aleatorios\n",
-    "    # W_f = np.random.randn\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
-    "    \n",
-    "    # Bias del forget gate\n",
+    "    W_f = np.random.randn(hidden_size, z_size)\n",
     "    b_f = np.zeros((hidden_size, 1))\n",
     "\n",
     "    # Aprox 1 linea para empezar la matriz de pesos de la input gate\n",
     "    # Recuerden que esta debe empezar con numeros aleatorios\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
-    "    \n",
-    "    # Bias para input gate\n",
+    "    W_i = np.random.randn(hidden_size, z_size)\n",
     "    b_i = np.zeros((hidden_size, 1))\n",
     "\n",
     "    # Aprox 1 linea para empezar la matriz de pesos para la memoria candidata\n",
-    "    # Recuerden que esta debe empezar con numeros aleatorios\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
-    "    \n",
-    "    # Bias para la memoria candidata\n",
+    "    W_g = np.random.randn(hidden_size, z_size)\n",
     "    b_g = np.zeros((hidden_size, 1))\n",
     "\n",
-    "    # Aprox 1 linea para empezar la matriz de pesos para la output gate\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
-    "    \n",
-    "    # Bias para la output gate\n",
+    "    W_o = np.random.randn(hidden_size, z_size)\n",
     "    b_o = np.zeros((hidden_size, 1))\n",
     "\n",
     "\n",
-    "    # Aprox 1 linea para empezar la matriz que relaciona el hidden state con el output\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
-    "    \n",
-    "    # Bias\n",
+    "    W_v = np.random.randn(vocab_size, hidden_size)\n",
     "    b_v = np.zeros((vocab_size, 1))\n",
     "    \n",
     "    # Init pesos ortogonalmente (https://arxiv.org/abs/1312.6120)\n",
@@ -2064,7 +2045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "412a27b5",
    "metadata": {
     "ExecuteTime": {
@@ -2085,7 +2066,88 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"5\"}--> \n",
+       "         ✓ [5 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"5\"}--> \n",
+       "         ✓ [5 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"5\"}--> \n",
+       "         ✓ [5 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"5\"}--> \n",
+       "         ✓ [5 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"5\"}--> \n",
+       "         ✓ [5 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "with tick.marks(5):        \n",
     "    assert check_hash(params[0], ((50, 54), -28071.583543573637))\n",
@@ -2128,7 +2190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "8a59a4dc",
    "metadata": {
     "ExecuteTime": {
@@ -2190,16 +2252,12 @@
     "    for x in inputs:\n",
     "\n",
     "        # Aprox 1 linea para concatenar el input y el hidden state\n",
-    "        # z = np.row.stack(...)\n",
-    "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
+    "        z = np.row_stack((h_prev, x))\n",
     "        z_s.append(z)\n",
     "        \n",
     "        # Aprox 1 linea para calcular el forget gate\n",
     "        # Hint: recuerde usar sigmoid\n",
-    "        # f = \n",
-    "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
+    "        f = sigmoid(np.dot(W_f, z) + b_f)\n",
     "        f_s.append(f)\n",
     "        \n",
     "        # Calculo del input gate\n",
@@ -2211,23 +2269,17 @@
     "        g_s.append(g)\n",
     "        \n",
     "        # Aprox 1 linea para calcular el estado de la memoria\n",
-    "        # C_prev = \n",
-    "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
+    "        C_prev = f * C_prev + i * g\n",
     "        C_s.append(C_prev)\n",
     "        \n",
     "        # Aprox 1 linea para el calculo de la output gate\n",
     "        # Hint: recuerde usar sigmoid\n",
-    "        # o = \n",
-    "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
+    "        o = sigmoid(np.dot(W_o, z) + b_o)\n",
     "        o_s.append(o)\n",
     "        \n",
     "        # Calculate hidden state\n",
     "        # Aprox 1 linea para el calculo del hidden state\n",
-    "        # h_prev =\n",
-    "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
+    "        h_prev = o * tanh(C_prev)\n",
     "        h_s.append(h_prev)\n",
     "\n",
     "        # Calcular logits\n",
@@ -2243,7 +2295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "id": "71f758df",
    "metadata": {
     "ExecuteTime": {
@@ -2264,7 +2316,36 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Secuencia Input:\n",
+      "['a', 'a', 'a', 'a', 'a', 'a', 'a', 'a', 'a', 'a', 'a', 'b', 'b', 'b', 'b', 'b', 'b', 'b', 'b', 'b', 'b', 'b']\n",
+      "Secuencia Target:\n",
+      "['a', 'a', 'a', 'a', 'a', 'a', 'a', 'a', 'a', 'a', 'b', 'b', 'b', 'b', 'b', 'b', 'b', 'b', 'b', 'b', 'b', 'EOS']\n",
+      "Secuencia Predicha:\n",
+      "['b', 'b', 'b', 'b', 'b', 'b', 'b', 'b', 'b', 'b', 'b', 'EOS', 'EOS', 'EOS', 'b', 'b', 'b', 'b', 'b', 'b', 'b', 'b']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"5\"}--> \n",
+       "         ✓ [5 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Obtener la primera secuencia para probar\n",
     "inputs, targets = test_set[1]\n",
@@ -2482,7 +2563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "id": "58def9bc",
    "metadata": {
     "ExecuteTime": {
@@ -2503,7 +2584,41 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Perdida obtenida:-5.492937315458131\n",
+      "Warning: Got -5.49294e+00 -> 0x95ea45fb, expected 0x53c34f25\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<hr style=\"height:10px;border:none;color:#f00;background-color:#f00;\" />\n",
+       "        <div class=\"alert alert-box alert-danger\">\n",
+       "        <h1> <!--{id:\"WRONGMARK\", marks:\"5\"}--> Test failed ✘ [0/5] marks  </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[65], line 7\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPerdida obtenida:\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mloss\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m tick\u001b[38;5;241m.\u001b[39mmarks(\u001b[38;5;241m5\u001b[39m):        \n\u001b[1;32m----> 7\u001b[0m     \u001b[38;5;28;01massert\u001b[39;00m(check_scalar(loss, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m0x53c34f25\u001b[39m\u001b[38;5;124m'\u001b[39m))\n",
+      "\u001b[1;31mAssertionError\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "# Realizamos un backward pass para probar\n",
     "loss, grads = backward(z_s, f_s, i_s, g_s, C_s, o_s, h_s, v_s, outputs, targets_one_hot, params)\n",
